--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+:root{
+  --mainColor: #ffff;
+  --SecondaryColor:rgba(0, 27, 46, 1);
+  --textColor: rgba(204, 204, 204, 1);
+  ;
+}
