--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,55 @@
+
 header{
-  /* width: 1,440px; */
-  height: 118px;
-  padding: 30px 0px 20px 0px;
+  /* height: 118px; */
+  padding: 15px 0px 0px 0px;
   border-bottom: 1px solid var(--textColor);
   background-color: var(--mainColor);
   top: 0; 
   z-index: -1;
 }
-.nav-div1{
+.container-fluid{
+  display: flex;
+  /* justify-content: space-between; */
+  /* justify-content: space-between !important; */
+}
+nav{
   width: 80%;
   margin: auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between !important;  */
+  /* align-items: center; */
+}
+.navbar-nav{
+  /* display: flex !important; */
+  /* align-items: center; */
+  /* justify-content: space-between; */
+  /* justify-content: space-around; */
+  margin: auto;
 }
 .logo{
   font-size: 32px;
   font-weight: 500;
   line-height: 48px;
+  text-decoration: none !important;
+  margin-left: 20px;
+  /* margin-top: 8px; */
+}
+.logo-img{
+  width: 64px;
+  height: 64px;
+}
+.navbar-brand{
+  align-items: center;
+}
+.navbar2-div{
+  align-items: center;
+  justify-content: space-between;
 }
 .nav-link{
   color: var(--textColor);
   font-size: 18px;
-  /* margin: 0px 40px 0px 40px; */
   position: relative;
   padding: 0 10px;
+  margin: 0px 25px 0px 25px;
 }
 .nav-link::after{
   width: 0;
@@ -402,6 +427,19 @@ header{
 }
 .policy-divs{
   margin-top: 80px;
+}
+.signup-main{
+  width: 100%;
+}
+.signup-input{
+  height: 50px;
+}
+.signup-div1{
+  margin: auto;
+  margin-top:100px ;
+}
+.signup-title{
+  font-size: var(--bigFontSize);
 }
 
 @media screen and (max-width: 1024px) {
